fix filter margin on mobile

--- a/app/assets/stylesheets/live_jobs.scss
+++ b/app/assets/stylesheets/live_jobs.scss
@@ -224,6 +224,10 @@
     padding-right: 10px;
     border-radius: 20px;
 
+    @media (max-width: 991px) {
+      margin-right: 25px;
+    }
+
     @media (min-width: 992px) {
       margin-left: 30px;
       margin-right: 20px;
